--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,4 @@
 spring.application.name=demo
 server.port=8002
+spring.profiles.active=local
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
-# mybatis plus  sql
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-
-#配置redis
-spring.redis.database=0
-spring.redis.host=132.145.125.215
-spring.redis.port=6379
-spring.redis.password=
-spring.redis.timeout=15000ms
-spring.redis.jedis.pool.max-active=9
-spring.redis.jedis.pool.max-idle=8
-spring.redis.jedis.pool.max-wait=-1
-spring.redis.jedis.pool.min-idle=0
-## 发送邮件
-error.mail=18298340298@163.com,17600131686@163.com,wujlong@yonyou.com
-spring.mail.host=smtp.qq.com
-spring.mail.username=729857382@qq.com
-spring.mail.password=tiepedsngpkwbbcd
-spring.mail.default-encoding=utf-8
-spring.mail.properties.mail.socketFactory.class=javax.net.ssl.SSLSocketFactory
