--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,6 +4,10 @@ spring.datasource.username=root
 spring.datasource.password=root
 # mybatis plus  sql
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#private String[] mapperLocations = new String[]{"classpath*:/mapper/**/*.xml"};
+#mybatis-plus.mapper-locations=classpath*:/mapper/**/*.xml
+mybatis-plus.config-location=classpath:/mybatis-config.xml
+mybatis-plus.configuration.map-underscore-to-camel-case=true
 
 #配置redis
 spring.redis.database=0
